# x-scrape-cdp

./: .env.example  .gitignore  Makefile  README.md  full-plan.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  instances.yaml  listener_5_17.yaml  test_0xvalarion.yaml
data/: scrape_state.json
docker/: compose.multi.yaml
docs/: ADR-001-session-strategy.md  RISKS.md  SCOPE.md
plans/: README.md  phase-00-context-and-risks.md  phase-01-preparation.md  phase-02-authentication-capture.md  phase-03-session-injection.md  phase-04-cdp-connection.md  phase-05-anti-detection.md  phase-06-navigation-listener.md  phase-07-data-extraction.md  phase-08-ai-agent-integration.md  phase-09-loop-scheduling.md  phase-10-multi-instance-scaling.md  phase-99-reference-flow-maintenance.md
plans/development/: README.md  concrete-work.md
scripts/: debug_reply_trace.py  debug_reply_trace_find_ids.py  debug_reply_trace_timeline.py  debug_status_dom_counts.py  launch_chrome.ps1  launch_chrome.sh  run_instance.ps1  run_with_valid_cdp.ps1
src/x_scrape_cdp/: cdp.py  cli.py  config.py  extract.py  logging_setup.py  loop.py  navigation.py  rich_log.py  session.py  state.py  stealth.py  storage.py  utils.py
src/x_scrape_cdp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_config.py  test_cookies.py  test_extract_parsing.py  test_navigation.py  test_post_to_dict.py  test_rate_cap.py  test_session.py  test_state.py  test_stealth.py  test_storage.py  test_utils.py
tests/smoke/: test_live_marker.py
(+2 files in other folders)
