[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-scrape-cdp"
version = "0.1.0"
description = "X profile post listener over CDP + Playwright"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "playwright>=1.54.0",
  "playwright-stealth>=1.0.6",
  "PyYAML>=6.0.1",
  "httpx>=0.27.0",
  "typer>=0.12.3",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.0",
]

[project.scripts]
x-scrape-cdp = "x_scrape_cdp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "live: marks tests that require a live browser session",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
